--- a/css/components/menu.css
+++ b/css/components/menu.css
@@ -13,7 +13,7 @@
     background-image: url('../../JOYO - Images/menu-hero-bg.jpg');
     background-size: cover;
     background-position: center;
-    margin-top: 80px;
+    margin-top: 0;
     overflow: hidden;
 }
 
